messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-blue # The name remains the same
spec:
  replicas: 2
  # The strategy is RollingUpdate by default, we can make it explicit
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  selector:
    matchLabels:
      app: django-app
      version: blue
  template:
    metadata:
      labels:
        app: django-app
        version: blue
    spec:
      containers:
        - name: django-app
          # --- MODIFICATION 1: Update the image tag ---
          image: messaging-app:2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
